# FTSE-100-UK-Stock-Market

./: FTSE 100.csv  FTSE-100.csv  README.md  code.py  dd.py  pyproject.toml  requirements.txt  runtime.txt
