[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<=3.7.16"
streamlit = ">=1.2.0"
tensorflow = ">=1.15.4,<2.0"
scikit_learn = ">=0.20.0"

[tool.poetry.dev-dependencies]
black = "*"  # Code formatting with Black
pynvim = "*"  # Allows nvim users to use Black formatting

[[tool.poetry.source]]
name = "default"
url = "https://pypi.python.org/simple"
secondary = false
